--- a/index.html
+++ b/index.html
@@ -9,8 +9,21 @@
             _miscellaneous
             </header>
         </div>
-        <div>
-            
+        <div id="sidebar">
+            <button id="about"> about </button>
+            <button id="tech"> tech </button>
+            <button id="vis">visual art</button>
+            <button id="sculpt">sculpture</button>
+            <button id="writing">writing</button>
+            <button id="video">video</button>
         </div>
+        <main>
+            <label for="sort">sort by...</label>
+            <select id="sort">
+                <option value="dateAsc" onclick="">old to new</option>
+                <option value="dateDesc">new to old</option>
+                <option value="abc">alphabetic</option>
+            </select>
+        </main>
     </body>
 </html>
