additional edits + favicon

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
     <head>
-        <title>HOME</title>
+        <title>_MISCELLANEOUS</title>
         <link rel="stylesheet" type="text/css" href="index.css">
+        <script defer></script>
     </head>
     <body>
         <div>
@@ -20,7 +21,7 @@
         <main>
             <label for="sort">sort by...</label>
             <select id="sort">
-                <option value="dateAsc" onclick="">old to new</option>
+                <option value="dateAsc" onclick="sortByDate">old to new</option>
                 <option value="dateDesc">new to old</option>
                 <option value="abc">alphabetic</option>
             </select>
