--- a/index.html
+++ b/index.html
@@ -1,30 +1,36 @@
 <html>
     <head>
-        <title>_MISCELLANEOUS</title>
+        <title>_misc</title>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@1,300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@200&family=Roboto+Mono:ital,wght@1,300&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="index.css">
-        <script defer></script>
+        <link rel="icon" type="image/png" href="misclogo.png">
+        <script src="index.js" defer></script>
     </head>
     <body>
+        
         <div>
             <header>
             _miscellaneous
             </header>
         </div>
-        <div id="sidebar">
-            <button id="about"> about </button>
-            <button id="tech"> tech </button>
-            <button id="vis">visual art</button>
-            <button id="sculpt">sculpture</button>
-            <button id="writing">writing</button>
-            <button id="video">video</button>
+        <div id="everythingelse">
+            <div id="sidebar">
+                <button id="about"> about </button>
+                <button id="tech"> tech </button>
+                <button id="vis">visual art</button>
+                <button id="sculpt">sculpture</button>
+                <button id="writing">writing</button>
+                <button id="video">video</button>
+            </div>
+            <main>
+                <label for="sort">sort by...</label>
+                <select id="sort">
+                    <option value="dateAsc" onclick="sortByDate()">old to new</option>
+                    <option value="dateDesc" onclick="sortByDate(true)">new to old</option>
+                    <option value="abc">alphabetic</option>
+                </select>
+            </main>
         </div>
-        <main>
-            <label for="sort">sort by...</label>
-            <select id="sort">
-                <option value="dateAsc" onclick="sortByDate">old to new</option>
-                <option value="dateDesc">new to old</option>
-                <option value="abc">alphabetic</option>
-            </select>
-        </main>
     </body>
 </html>
