--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         </div>
         <div id="everythingelse">
             <div id="sidebar">
+                
+            </div>
+            <div id="buttons">
                 <button id="about"> about </button>
                 <button id="tech"> tech </button>
                 <button id="vis">visual art</button>
